--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,7 +2,7 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes/*/*.bb ${LAYERDIR}/recipes/*/*.bbappend"
+BBFILES += "${LAYERDIR}/recipes/*/*.bb ${LAYERDIR}/test/images/*/*.bb"
 
 BBFILE_COLLECTIONS += "games-layer"
 BBFILE_PATTERN_games-layer := "^${LAYERDIR}/"
