Rename recipes to recipes-games to match the layered openembedded structure.
Signed-off-by: Denis 'GNUtoo' Carikli <GNUtoo@no-log.org>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,7 +2,7 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes/*/*.bb ${LAYERDIR}/dependencies/*/*.bb ${LAYERDIR}/test/images/*/*.bb"
+BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/dependencies/*/*.bb ${LAYERDIR}/test/images/*/*.bb"
 
 BBFILE_COLLECTIONS += "games-layer"
 BBFILE_PATTERN_games-layer := "^${LAYERDIR}/"
