--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,3 +7,5 @@ BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/dependencies/*/*.bb ${LAYERD
 BBFILE_COLLECTIONS += "games-layer"
 BBFILE_PATTERN_games-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_games-layer = "15"
+
+LAYERSERIES_COMPAT_games-layer = "rocko sumo"
