--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILE_COLLECTIONS += "games-layer"
 BBFILE_PATTERN_games-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_games-layer = "15"
 
-LAYERSERIES_COMPAT_games-layer = "rocko sumo thud warrior zeus"
+LAYERSERIES_COMPAT_games-layer = "zeus"
