--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_PATTERN_games-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_games-layer = "15"
 
 LAYERDEPENDS_games-layer = "core openembedded-layer filesystems-layer gnome-layer networking-layer multimedia-layer meta-python"
-LAYERSERIES_COMPAT_games-layer = "kirkstone"
+LAYERSERIES_COMPAT_games-layer = "kirkstone langdale"
